# mxcore

./: .gitignore  CMakeDoxygen.cmake  CMakeLists.txt  Dockerfile  Makefile.am  README.md  configure.ac  test.py  vector.pc.in
.circleci/: config.yml
.github/workflows/: c.yml
.semaphore/: semaphore.yml
Module/: FindSphinx.cmake
aerate/: canonicalize.py  inline.py  main.py  mutation.py  render.py  test.py
ci/: Dockerfile  Dockerfile.debian  Makefile
documentation/: .gitignore  CMakeLists.txt  before-rtd  common.rst  conf.py  index.rst  make.bat  requirements.txt  resize.rst  resize_source.rst  rtd
documentation/source/: index.rst  resize.rst
documentation/static/: custom.css
documentation/vector/: access.rst  common.rst  create.rst  delete.rst  move.rst  resize.rst  shift.rst
documentation/xml/: access_8h.xml  common_8h.xml  comparison_8h.xml  create_8h.xml  debug_8h.xml  delete_8h.xml  dir_0b3169e7342c9c4771e3c073dd110e3f.xml  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.xml  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.xml  dir_f9303529f6af550a3fc45a0cec448a6c.xml  group__vector__module.xml  header_2vector_2access_8c.xml  header_2vector_2common_8c.xml  header_2vector_2comparison_8c.xml  header_2vector_2create_8c.xml  header_2vector_2debug_8c.xml  header_2vector_2delete_8c.xml  header_2vector_2insert_8c.xml  header_2vector_2move_8c.xml  header_2vector_2remove_8c.xml  header_2vector_2resize_8c.xml  header_2vector_2search_8c.xml  header_2vector_2shift_8c.xml  header_2vector_2sort_8c.xml  index.xml  insert_8h.xml  move_8h.xml  remove_8h.xml  resize_8h.xml  search_8h.xml  shift_8h.xml  sort_8h.xml  source_2vector_2access_8c.xml  source_2vector_2common_8c.xml  source_2vector_2comparison_8c.xml  source_2vector_2create_8c.xml  source_2vector_2debug_8c.xml  source_2vector_2delete_8c.xml  source_2vector_2insert_8c.xml  source_2vector_2move_8c.xml  (+7 more)
header/: vector.h
header/vector/: access.c  access.h  common.c  common.h  comparison.c  comparison.h  create.h  debug.c  debug.h  delete.h  insert.c  insert.h  move.c  move.h  remove.h  resize.c  resize.h  search.c  search.h  shift.c  shift.h  sort.c  sort.h
source/: common.h  vector.c  vector.h
source/vector/: access.c  access.h  common.c  common.h  comparison.c  create.c  create.h  debug.c  delete.c  insert.c  insert.h  move.c  move.h  remove.c  remove.h  resize.c  resize.h  search.c  search.h  shift.c  sort.c  sort.h
test/: CMakeLists.txt  stub.c  test.h  vector_access.c  vector_at.c  vector_common.c  vector_comparison.c  vector_create.c  vector_create_with.c  vector_debug.c  vector_define.c  vector_delete.c  vector_duplicate.c  vector_ensure.c  vector_insert.c  vector_move.c  vector_remove.c  vector_resize.c  vector_search.c  vector_shift.c  vector_shrink.c  vector_sort.c  vector_swap.c
tool/: FindSphinx.cmake
